fix: z-index in header

--- a/styles/style.css
+++ b/styles/style.css
@@ -145,7 +145,7 @@ img {
 	left: 0;
 	right: 0;
 	top: 0;
-	z-index: 1;
+	z-index: 1000;
 	padding: 40px 0 37px;
 	background-color: #ffffff;
 }
